📝 Update sc-imaging3 notebook

--- a/docs/sc-imaging3.ipynb
+++ b/docs/sc-imaging3.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "![imaging3/4](https://img.shields.io/badge/imaging3/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/imaging3.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/sc-imaging3.ipynb)"
    ]
   },
   {
@@ -22,17 +22,19 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "Here, we use [scPortrait](https://github.com/MannLabs/scPortrait) to extract cell features that characterize both morphological and intensity-based properties of individual cells:\n",
+    "Here, we use [scPortrait](https://github.com/MannLabs/scPortrait) to extract features that capture both morphological and intensity-based properties of individual cells:\n",
     "\n",
-    "- Area of the masks in pixels\n",
-    "- Mean intensity of the chosen channel in the regions labelled by each of the masks\n",
-    "- Median intensity of the chosen channel in the regions labelled by each of the masks\n",
-    "- 75% quantile of the chosen channel in the regions labelled by each of the masks  \n",
-    "- 25% quantile of the chosen channel in the regions labelled by each of the masks\n",
-    "- Summed intensity of the chosen channel in the regions labelled by each of the masks\n",
-    "- Summed intensity of the chosen channel in the region labelled by each of the masks normalized for area\n",
+    "**Morphological features:**\n",
+    "- Cell area (in pixels)\n",
     "\n",
-    "These features provide a comprehensive profile for later training of machine learning models to identify cell types and states."
+    "**Intensity features for each fluorescence channel:**\n",
+    "- Mean intensity\n",
+    "- Median intensity\n",
+    "- 25th and 75th percentile intensities\n",
+    "- Total intensity\n",
+    "- Intensity density (total intensity normalized by area)\n",
+    "\n",
+    "These comprehensive cellular profiles enable downstream machine learning analysis to identify cell types and states."
    ]
   },
   {
@@ -60,7 +62,7 @@
    "id": "4",
    "metadata": {},
    "source": [
-    "We will generate these features on the basis of the previously generated single-cell image datasets."
+    "We will use the single-cell image datasets we generated earlier."
    ]
   },
   {
@@ -80,6 +82,7 @@
     "    .filter(ulabels__name=\"autophagy imaging\", is_latest=True)\n",
     "    .filter(ulabels__name=\"scportrait single-cell images\")\n",
     ")\n",
+    "\n",
     "config = (\n",
     "    ln.Artifact.filter(ulabels__name=\"autophagy imaging\")\n",
     "    .filter(ulabels__name=\"scportrait config\")\n",
@@ -89,9 +92,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "Extract cellular features from `WT` cells:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {
     "tags": [
      "hide-output"
@@ -106,47 +117,42 @@
     "def featurize_datasets(artifact_list) -> pd.DataFrame:\n",
     "    paths = [dataset.cache() for dataset in artifact_list]\n",
     "    dataset_lookup = {idx: cell.uid for idx, cell in enumerate(artifact_list)}\n",
-    "    labels = list(dataset_lookup.keys())\n",
+    "\n",
     "    results = featurizer.process(\n",
-    "        dataset_paths=paths, dataset_labels=labels, return_results=True\n",
+    "        dataset_paths=paths,\n",
+    "        dataset_labels=list(dataset_lookup.keys()),\n",
+    "        return_results=True,\n",
     "    )\n",
     "\n",
-    "    # ensure we store the original dataset uid to be able to track featurization results back to their original dataset\n",
+    "    # Store original dataset uid for tracking\n",
     "    results[\"dataset\"] = results[\"label\"].map(dataset_lookup)\n",
-    "    del results[\"label\"]\n",
-    "    return results\n",
+    "    return results.drop(columns=[\"label\"])\n",
     "\n",
     "\n",
-    "# Train on wildtype (WT) cells\n",
+    "# Get WT cells and extract features by condition\n",
     "wt_cells_afs = sc_datasets.filter(ulabels__name=\"WT\")\n",
-    "\n",
-    "# we have two different conditions which will be the two classes that our classifier should be able to tell apart\n",
-    "condition_uls = [\n",
-    "    ln.ULabel.using(\"scportrait/examples\").get(name=stim_name)\n",
-    "    for stim_name in {af.features.get_values()[\"stimulation\"] for af in wt_cells_afs}\n",
-    "]\n",
-    "\n",
-    "# map condition names to class labels\n",
     "class_lookup = {\"untreated\": 0, \"14h Torin-1\": 1}\n",
     "\n",
-    "features = None\n",
-    "for _, condition_ul in enumerate(condition_uls):\n",
+    "# Get unique conditions\n",
+    "conditions = {af.features.get_values()[\"stimulation\"] for af in wt_cells_afs}\n",
+    "condition_uls = [\n",
+    "    ln.ULabel.using(\"scportrait/examples\").get(name=name) for name in conditions\n",
+    "]\n",
+    "\n",
+    "# Process each condition\n",
+    "features_list = []\n",
+    "for condition_ul in condition_uls:\n",
     "    cells = wt_cells_afs.filter(ulabels=condition_ul)\n",
     "    results = featurize_datasets(cells)\n",
-    "\n",
-    "    # save condition as a class label\n",
     "    results[\"class\"] = class_lookup[condition_ul.name]\n",
+    "    features_list.append(results)\n",
     "\n",
-    "    # concatenate results together\n",
-    "    if features is None:\n",
-    "        features = results\n",
-    "    else:\n",
-    "        features = pd.concat([features, results])"
+    "features = pd.concat(features_list, ignore_index=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "Ingest the generated features to our instance:"
@@ -155,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {
     "tags": [
      "hide-output"
@@ -168,6 +174,7 @@
     "    description=\"featurized single-cell images\",\n",
     "    key=\"featurization_results/WT.parquet\",\n",
     ").save()\n",
+    "\n",
     "artifact.cell_lines.add(bt.CellLine.get(name=\"U2OS\"))\n",
     "\n",
     "artifact.features.add_values(\n",
@@ -180,46 +187,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
-    "Repeat this process for KO cells:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# Process KO cells to see if they behave differently\n",
-    "ko_cells_afs = sc_datasets.filter(ulabels__name=\"EI24KO\")\n",
-    "\n",
-    "# we have the same two conditions as before\n",
-    "condition_uls = [\n",
-    "    ln.ULabel.using(\"scportrait/examples\").get(name=stimulation_name)\n",
-    "    for stimulation_name in {\n",
-    "        af.features.get_values()[\"stimulation\"] for af in ko_cells_afs\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "features_ko = None\n",
-    "for _, condition_ul in enumerate(condition_uls):\n",
-    "    cells = ko_cells_afs.filter(ulabels=condition_ul)\n",
-    "    results = featurize_datasets(cells)\n",
-    "\n",
-    "    # save condition as a class label\n",
-    "    results[\"class\"] = class_lookup[condition_ul.name]\n",
-    "\n",
-    "    if features_ko is None:\n",
-    "        features_ko = results\n",
-    "    else:\n",
-    "        features_ko = pd.concat([features_ko, results])"
+    "Extract features from `KO` cells using the same approach:"
    ]
   },
   {
@@ -233,14 +204,45 @@
    },
    "outputs": [],
    "source": [
+    "# Process KO cells to see if they behave differently\n",
+    "ko_cells_afs = sc_datasets.filter(ulabels__name=\"EI24KO\")\n",
+    "\n",
+    "# Get unique conditions for KO cells\n",
+    "conditions = {af.features.get_values()[\"stimulation\"] for af in ko_cells_afs}\n",
+    "condition_uls = [\n",
+    "    ln.ULabel.using(\"scportrait/examples\").get(name=name) for name in conditions\n",
+    "]\n",
+    "\n",
+    "# Process each condition\n",
+    "features_ko_list = []\n",
+    "for condition_ul in condition_uls:\n",
+    "    cells = ko_cells_afs.filter(ulabels=condition_ul)\n",
+    "    results = featurize_datasets(cells)\n",
+    "    results[\"class\"] = class_lookup[condition_ul.name]\n",
+    "    features_ko_list.append(results)\n",
+    "\n",
+    "features_ko = pd.concat(features_ko_list, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "artifact = ln.Artifact.from_df(\n",
     "    features_ko,\n",
     "    description=\"featurized single-cell images\",\n",
     "    key=\"featurization_results/EI24KO.parquet\",\n",
     ").save()\n",
+    "\n",
     "artifact.cell_lines.add(bt.CellLine.filter(name=\"U2OS\").one())\n",
     "\n",
-    "# annotate with required metadata\n",
     "artifact.features.add_values(\n",
     "    {\n",
     "        \"study\": \"autophagy imaging\",\n",
@@ -252,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
