📝 Remove reference to track

--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -428,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We tracked pipeline and notebook runs through {meth}`~docs:lamindb.core.Context.track`, which stores a {class}`~docs:lamindb.Transform` and a {class}`~docs:lamindb.Run` record within a global context.\n",
+    "We tracked pipeline and notebook runs through `lamindb.core.Context.track`, which stores a {class}`~docs:lamindb.Transform` and a {class}`~docs:lamindb.Run` record within a global context.\n",
     "\n",
     "{class}`~lamindb.Artifact` objects are the inputs and outputs of runs. "
    ]
