--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -69,18 +69,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_ontology = bt.Source.get(\n",
+    "disease_source = bt.Source.get(\n",
     "    entity=\"bionty.Disease\", name=\"mondo\", currently_used=True\n",
     ")\n",
     "\n",
-    "developmental_stage_ontology = bt.Source.get(\n",
+    "developmental_stage_source = bt.Source.get(\n",
     "    entity=\"bionty.DevelopmentalStage\", name=\"hsapdv\", currently_used=True\n",
     ")\n",
     "\n",
-    "bt.Source.filter(entity=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
-    "phenotype_ontology = bt.Source.get(\n",
-    "    entity=\"bionty.Phenotype\", name=\"hp\", currently_used=True\n",
-    ")"
+    "bt.Source.filter(entity=\"bionty.Phenotype\", name=\"pato\").update(currently_used=False)\n",
+    "phenotype_source = bt.Source.get(\n",
+    "    entity=\"bionty.Phenotype\", name=\"hp\"\n",
+    ")  # will use add_source\n",
+    "phenotype_source.currently_used = True\n",
+    "phenotype_source.save()"
    ]
   },
   {
@@ -109,21 +111,21 @@
     "            dtype=bt.Disease,\n",
     "            default_value=\"normal\",\n",
     "            nullable=False,\n",
-    "            cat_filters={\"source__uid\": disease_ontology.uid},\n",
+    "            cat_filters={\"source__uid\": disease_source.uid},\n",
     "        ).save(),\n",
     "        ln.Feature(\n",
     "            name=\"developmental_stage\",\n",
     "            dtype=bt.DevelopmentalStage,\n",
     "            default_value=\"unknown\",\n",
     "            nullable=False,\n",
-    "            cat_filters={\"source__uid\": developmental_stage_ontology.uid},\n",
+    "            cat_filters={\"source__uid\": developmental_stage_source.uid},\n",
     "        ).save(),\n",
     "        ln.Feature(\n",
     "            name=\"phenotype\",\n",
     "            dtype=bt.Phenotype,\n",
     "            default_value=\"unknown\",\n",
     "            nullable=False,\n",
-    "            cat_filters={\"source__uid\": phenotype_ontology.uid},\n",
+    "            cat_filters={\"source__uid\": phenotype_source.uid},\n",
     "        ).save(),\n",
     "    ],\n",
     ").save()\n",
@@ -204,7 +206,7 @@
     "try:\n",
     "    curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
-    "    assert str(e).startswith(\"column 'age' not in dataframe\")\n",
+    "    assert \"column 'age' not in dataframe\" in str(e)\n",
     "    print(e)"
    ]
   },
@@ -229,7 +231,7 @@
     "try:\n",
     "    curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
-    "    assert str(e).startswith(\"non-nullable series 'disease' contains null values\")\n",
+    "    assert \"non-nullable series 'disease' contains null values\" in str(e)\n",
     "    print(e)"
    ]
   },
