✨ Add image_path Feature to the Autophagy imaging schema

--- a/docs/sc-imaging.ipynb
+++ b/docs/sc-imaging.ipynb
@@ -204,6 +204,7 @@
     "    name=\"Autophagy imaging schema\",\n",
     "    features=[\n",
     "        *[ln.Feature(name=name, dtype=ln.ULabel.name).save() for name in ulabel_names],\n",
+    "        ln.Feature(name=\"image_path\", dtype=str, description=\"image path\").save(),\n",
     "        ln.Feature(name=\"cell_line\", dtype=bt.CellLine.name).save(),\n",
     "        ln.Feature(name=\"resolution\", dtype=float, description=\"conversion factor for px to µm\").save(),\n",
     "    ],\n",
