📝 Add artifact type feature and associated label for scPortrait configuration

--- a/docs/sc-imaging2.ipynb
+++ b/docs/sc-imaging2.ipynb
@@ -161,6 +161,10 @@
    },
    "outputs": [],
    "source": [
+    "# Create artifact type feature and associated label\n",
+    "ln.Feature(name=\"artifact type\", dtype=ln.ULabel).save()\n",
+    "ln.ULabel(name=\"scportrait config\").save()\n",
+    "\n",
     "# Load config file for processing all datasets\n",
     "config_file_af = ln.Artifact.using(\"scportrait/examples\").get(\n",
     "    key=\"input_data_imaging_usecase/config.yml\"\n",
