📝 Fix cell line naming for U-2 OS in featurization results

--- a/docs/sc-imaging3.ipynb
+++ b/docs/sc-imaging3.ipynb
@@ -175,7 +175,7 @@
     "    key=\"featurization_results/WT.parquet\",\n",
     ").save()\n",
     "\n",
-    "artifact.cell_lines.add(bt.CellLine.get(name=\"U2OS\"))\n",
+    "artifact.cell_lines.add(bt.CellLine.get(name=\"U-2 OS cell\"))\n",
     "\n",
     "artifact.features.add_values(\n",
     "    {\n",
@@ -241,7 +241,7 @@
     "    key=\"featurization_results/EI24KO.parquet\",\n",
     ").save()\n",
     "\n",
-    "artifact.cell_lines.add(bt.CellLine.filter(name=\"U2OS\").one())\n",
+    "artifact.cell_lines.add(bt.CellLine.filter(name=\"U-2 OS cell\").one())\n",
     "\n",
     "artifact.features.add_values(\n",
     "    {\n",
