--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -102,9 +102,9 @@
     "path = ln.core.datasets.file_tsv_rnaseq_nfcore_salmon_merged_gene_counts(\n",
     "    populate_registries=True\n",
     ")\n",
-    "# move it into the output directory\n",
+    "# move the count matrix into the output directory\n",
     "path = path.rename(f\"./test-bulkrna/output_dir/{path.name}\")\n",
-    "# register it\n",
+    "# register the count matrix\n",
     "ln.Artifact(path, description=\"Merged Bulk RNA counts\").save()"
    ]
   },
@@ -145,19 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.get(description=\"Merged Bulk RNA counts\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "artifact = ln.Artifact.get(description=\"Merged Bulk RNA counts\")\n",
     "df = artifact.load()"
    ]
   },
@@ -285,21 +273,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Curate ![](https://img.shields.io/badge/Curate-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a Artifact object from this AnnData."
+    "We define a simple Schema for Bulk RNA datasets that only expects genes with stable IDs to be stored in the dataset.\n",
+    "Later, we can add additional metadata to the curated dataset such as the assay or the organism."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bulk_schema = ln.Schema(itype=bt.Gene.stable_id, otype=\"AnnData\").save()\n",
+    "\n",
+    "# set the organism to map to saccharomyces cerevisiae genes\n",
+    "bt.settings.organism = \"saccharomyces cerevisiae\"\n",
+    "\n",
+    "curator = ln.curators.AnnDataCurator(adata, bulk_schema)\n",
+    "curator.validate()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Almost all gene IDs are validated:"
+    "Let's create and save the artifact:"
    ]
   },
   {
@@ -312,32 +316,14 @@
    },
    "outputs": [],
    "source": [
-    "genes = bt.Gene.from_values(\n",
-    "    adata.var.index,\n",
-    "    bt.Gene.stable_id,\n",
-    "    organism=\"saccharomyces cerevisiae\",  # or set globally with bt.settings.organism\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# also register the 2 non-validated genes obtained from Bionty\n",
-    "ln.save(genes)"
+    "curated_af = curator.save_artifact(description=\"Curated bulk RNA counts\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981)"
+    "Link additional metadata records:"
    ]
   },
   {
@@ -358,21 +344,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curated_file = ln.Artifact.from_anndata(adata, description=\"Curated bulk RNA counts\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Hence, let's save this artifact:"
+    "curated_af.labels.add(efs.rna_seq, features.assay)\n",
+    "curated_af.labels.add(organism.saccharomyces_cerevisiae, features.organism)"
    ]
   },
   {
@@ -385,56 +361,7 @@
    },
    "outputs": [],
    "source": [
-    "curated_file.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link to validated metadata records:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curated_file.features._add_set_from_anndata(\n",
-    "    var_field=bt.Gene.stable_id, organism=\"saccharomyces cerevisiae\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curated_file.labels.add(efs.rna_seq, features.assay)\n",
-    "curated_file.labels.add(organism.saccharomyces_cerevisiae, features.organism)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curated_file.describe()"
+    "curated_af.describe()"
    ]
   },
   {
@@ -470,68 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_file.view_lineage()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's by query by gene:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "genes = bt.Gene.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "genes.spo7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# a gene set containing SPO7\n",
-    "feature_set = ln.FeatureSet.filter(genes=genes.spo7).first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# artifacts that link to this feature set\n",
-    "ln.Artifact.filter(feature_sets=feature_set).df()"
+    "curated_af.view_lineage()"
    ]
   },
   {
@@ -552,7 +418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.8"
   },
   "nbproject": {
    "id": "s5V0dNMVwL9i",
