--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -74,6 +74,15 @@
     "filepath = readfcs.datasets.Oetjen18_t1()\n",
     "\n",
     "adata = readfcs.read(filepath)\n",
+    "# since anndata>=0.12.0, `/` is not allowed in keys\n",
+    "adata.var.index = adata.var.index.str.replace(\"/\", \"|\")\n",
+    "adata.var[\"marker\"] = adata.var[\"marker\"].str.replace(\"/\", \"|\")\n",
+    "adata.uns[\"meta\"][\"spill\"].index = adata.uns[\"meta\"][\"spill\"].index.str.replace(\n",
+    "    \"/\", \"|\"\n",
+    ")\n",
+    "adata.uns[\"meta\"][\"spill\"].columns = adata.uns[\"meta\"][\"spill\"].columns.str.replace(\n",
+    "    \"/\", \"|\"\n",
+    ")\n",
     "adata"
    ]
   },
@@ -246,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.CellMarker(name=\"CD14/19\").save()"
+    "bt.CellMarker(name=\"CD14|19\").save()"
    ]
   },
   {
@@ -445,7 +454,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -459,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "SmQmhrhigFPL",
