♻️ Fix analysis-registries guide

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -344,20 +344,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_featureset = ln.FeatureSet.from_values(\n",
+    "degs_up_featureset = ln.Schema.from_values(\n",
     "    degs_up.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
-    "    type=\"category\",\n",
     "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "        \"human\"\n",
     "    ),\n",
     ")\n",
-    "degs_dw_featureset = ln.FeatureSet.from_values(\n",
+    "degs_dw_featureset = ln.Schema.from_values(\n",
     "    degs_dw.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
-    "    type=\"category\",\n",
     "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "        \"human\"\n",
     "    ),\n",
