♻️ More recent API

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin load use-cases-registries"
+    "!lamin connect use-cases-registries"
    ]
   },
   {
