🚚 Change .df( to .to_dataframe(

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -353,7 +353,7 @@
     "print(artifact.created_by)\n",
     "\n",
     "print(\"\\n\\n--> Which artifacts were inputs?\\n\")\n",
-    "display(artifact.run.input_artifacts.df())"
+    "display(artifact.run.input_artifacts.to_dataframe())"
    ]
   },
   {
