--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -190,7 +190,7 @@
     "    reference=\"CTRL\",\n",
     ")\n",
     "\n",
-    "rank_genes_groups_df = sc.get.rank_genes_groups_df(adata, \"STIM\")\n",
+    "rank_genes_groups_df = sc.get.rank_genes_groups_to_dataframe(adata, \"STIM\")\n",
     "rank_genes_groups_df.head()"
    ]
   },
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_features = ln.Feature.from_df(adata.obs)\n",
+    "new_features = ln.Feature.from_to_dataframe(adata.obs)\n",
     "ln.save(new_features)\n",
     "new_labels = [ln.ULabel(name=i) for i in adata.obs[\"stim\"].unique()]\n",
     "ln.save(new_labels)"
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.Pathway.filter(name__contains=\"interferon-beta\").df()"
+    "bt.Pathway.filter(name__contains=\"interferon-beta\").to_dataframe()"
    ]
   },
   {
@@ -459,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.Pathway.filter(genes__symbol=\"KIR2DL1\").df()"
+    "bt.Pathway.filter(genes__symbol=\"KIR2DL1\").to_dataframe()"
    ]
   },
   {
