--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -266,7 +266,7 @@
    },
    "outputs": [],
    "source": [
-    "adata.to_df()"
+    "adata.to_to_dataframe()"
    ]
   },
   {
@@ -388,7 +388,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.Artifact.df()"
+    "ln.Artifact.to_dataframe()"
    ]
   },
   {
