--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = public.df()\n",
+    "df = public.to_dataframe()\n",
     "df.head()"
    ]
   },
@@ -365,7 +365,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.Source.filter(entity=\"bionty.CellMarker\").df()"
+    "bt.Source.filter(entity=\"bionty.CellMarker\").to_dataframe()"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "outputs": [],
    "source": [
     "# only lists the sources that are currently used\n",
-    "bt.Source.filter(entity=\"bionty.CellMarker\", currently_used=True).df()"
+    "bt.Source.filter(entity=\"bionty.CellMarker\", currently_used=True).to_dataframe()"
    ]
   },
   {
@@ -413,7 +413,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.Source.filter(currently_used=True).df()"
+    "bt.Source.filter(currently_used=True).to_dataframe()"
    ]
   }
  ],
