--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -299,7 +299,9 @@
     "celltypist_df.columns = celltypist_df.columns.str.lower()\n",
     "\n",
     "# add standardize names for each ontology_id\n",
-    "celltypist_df[\"name\"] = bionty.df().loc[celltypist_df[\"ontology_id\"]].name.values"
+    "celltypist_df[\"name\"] = (\n",
+    "    bionty.to_dataframe().loc[celltypist_df[\"ontology_id\"]].name.values\n",
+    ")"
    ]
   },
   {
@@ -507,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.CellType.df()"
+    "bt.CellType.to_dataframe()"
    ]
   },
   {
