--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -130,7 +130,7 @@
     "    ],\n",
     ").save()\n",
     "# look at a dataframe of the features that are part of the schema\n",
-    "schema.features.df()"
+    "schema.features.to_dataframe()"
    ]
   },
   {
