--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.CellMarker.df().head()"
+    "bt.CellMarker.to_dataframe().head()"
    ]
   },
   {
@@ -72,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.CellMarker.search(\"PD-1\").df().head(2)"
+    "bt.CellMarker.search(\"PD-1\").to_dataframe().head(2)"
    ]
   },
   {
@@ -133,7 +133,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.Artifact.filter(feature_sets__in=panels_with_cd8).df()"
+    "ln.Artifact.filter(feature_sets__in=panels_with_cd8).to_dataframe()"
    ]
   },
   {
