--- a/docs/project-flow-scripts/hit-identification.ipynb
+++ b/docs/project-flow-scripts/hit-identification.ipynb
@@ -80,7 +80,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Artifact.from_df(output_df, description=\"hits from schmidt22 crispra GWS\").save()"
+    "ln.Artifact.from_to_dataframe(\n",
+    "    output_df, description=\"hits from schmidt22 crispra GWS\"\n",
+    ").save()"
    ]
   },
   {
