--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -403,7 +403,7 @@
    "outputs": [],
    "source": [
     "transform = ln.Transform.search(\"Project flow\").first()\n",
-    "transform.predecessors.df()"
+    "transform.predecessors.to_dataframe()"
    ]
   },
   {
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Artifact.filter(transform=transform).df()"
+    "ln.Artifact.filter(transform=transform).to_dataframe()"
    ]
   },
   {
@@ -571,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.testuser1).df()"
+    "ln.Transform.filter(created_by=users.testuser1).to_dataframe()"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.testuser1, type=\"notebook\").df()"
+    "ln.Transform.filter(created_by=users.testuser1, type=\"notebook\").to_dataframe()"
    ]
   },
   {
