--- a/docs/rdf-sparql.ipynb
+++ b/docs/rdf-sparql.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diseases = bt.Disease.df()\n",
+    "diseases = bt.Disease.to_dataframe()\n",
     "diseases.head()"
    ]
   },
