--- a/docs/sc-imaging2.ipynb
+++ b/docs/sc-imaging2.ipynb
@@ -111,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "input_images_df = input_images.df(features=True)\n",
+    "input_images_df = input_images.to_dataframe(features=True)\n",
     "\n",
     "display(input_images_df.head())\n",
     "\n",
