--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -553,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Artifact.df(features=True, include=[\"hash\", \"size\"])"
+    "ln.Artifact.to_dataframe(features=True, include=[\"hash\", \"size\"])"
    ]
   },
   {
