--- a/docs/spatial2.ipynb
+++ b/docs/spatial2.ipynb
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.Artifact.filter(transform=transform).df()"
+    "ln.Artifact.filter(transform=transform).to_dataframe()"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "outputs": [],
    "source": [
     "all_xenium_data = ln.Artifact.filter(experimental_factors__name=\"10x Xenium\")\n",
-    "all_xenium_data.df()"
+    "all_xenium_data.to_dataframe()"
    ]
   },
   {
