--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs = adata[:, ~validated].to_to_dataframe()\n",
+    "adata.obs = adata[:, ~validated].to_dataframe()\n",
     "adata = adata[:, validated].copy()"
    ]
   },
