--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "adata = adata[  # subset to rows that do not have nan values\n",
-    "    adata.to_to_dataframe().isna().sum(axis=1) == 0\n",
+    "    adata.to_dataframe().isna().sum(axis=1) == 0\n",
     "]"
    ]
   },
@@ -166,7 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "adata.to_to_dataframe().describe()"
+    "adata.to_dataframe().describe()"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "outputs": [],
    "source": [
     "validated = bt.CellMarker.validate(adata.var.index)\n",
-    "adata.obs = adata[:, ~validated].to_to_dataframe()\n",
+    "adata.obs = adata[:, ~validated].to_dataframe()\n",
     "adata = adata[:, validated].copy()"
    ]
   },
