--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "adata = adata[  # subset to rows that do not have nan values\n",
-    "    adata.to_dataframe().isna().sum(axis=1) == 0\n",
+    "    adata.to_df().isna().sum(axis=1) == 0\n",
     "]"
    ]
   },
@@ -166,7 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "adata.to_dataframe().describe()"
+    "adata.to_df().describe()"
    ]
   },
   {
