--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_features = ln.Feature.from_to_dataframe(adata.obs)\n",
+    "new_features = ln.Feature.from_dataframe(adata.obs)\n",
     "ln.save(new_features)\n",
     "new_labels = [ln.ULabel(name=i) for i in adata.obs[\"stim\"].unique()]\n",
     "ln.save(new_labels)"
