--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs = adata[:, ~validated].to_dataframe()\n",
+    "adata.obs = adata[:, ~validated].to_df()\n",
     "adata = adata[:, validated].copy()"
    ]
   },
@@ -345,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.from_to_dataframe(adata.obs)\n",
+    "features = ln.Feature.from_dataframe(adata.obs)\n",
     "ln.save(features)"
    ]
   },
