--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -276,7 +276,7 @@
    "outputs": [],
    "source": [
     "validated = bt.CellMarker.validate(adata.var.index)\n",
-    "adata.obs = adata[:, ~validated].to_dataframe()\n",
+    "adata.obs = adata[:, ~validated].to_df()\n",
     "adata = adata[:, validated].copy()"
    ]
   },
