--- a/docs/project-flow-scripts/hit-identification.ipynb
+++ b/docs/project-flow-scripts/hit-identification.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Artifact.from_to_dataframe(\n",
+    "ln.Artifact.from_dataframe(\n",
     "    output_df, description=\"hits from schmidt22 crispra GWS\"\n",
     ").save()"
    ]
