--- a/docs/sc-imaging3.ipynb
+++ b/docs/sc-imaging3.ipynb
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.from_to_dataframe(\n",
+    "artifact = ln.Artifact.from_dataframe(\n",
     "    features,\n",
     "    description=\"featurized single-cell images\",\n",
     "    key=\"featurization_results/WT.parquet\",\n",
@@ -235,7 +235,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.from_to_dataframe(\n",
+    "artifact = ln.Artifact.from_dataframe(\n",
     "    features_ko,\n",
     "    description=\"featurized single-cell images\",\n",
     "    key=\"featurization_results/EI24KO.parquet\",\n",
