♻️ Fix analysis-registries guide (#205)

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin load use-cases-registries"
+    "!lamin connect use-cases-registries"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_features = ln.Feature.from_df(adata.obs)\n",
+    "new_features = ln.Feature.from_dataframe(adata.obs)\n",
     "ln.save(new_features)\n",
     "new_labels = [ln.ULabel(name=i) for i in adata.obs[\"stim\"].unique()]\n",
     "ln.save(new_labels)"
@@ -344,20 +344,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_featureset = ln.FeatureSet.from_values(\n",
+    "degs_up_featureset = ln.Schema.from_values(\n",
     "    degs_up.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
-    "    type=\"category\",\n",
     "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "        \"human\"\n",
     "    ),\n",
     ")\n",
-    "degs_dw_featureset = ln.FeatureSet.from_values(\n",
+    "degs_dw_featureset = ln.Schema.from_values(\n",
     "    degs_dw.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
-    "    type=\"category\",\n",
     "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     "        \"human\"\n",
     "    ),\n",
@@ -445,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.Pathway.filter(name__contains=\"interferon-beta\").df()"
+    "bt.Pathway.filter(name__contains=\"interferon-beta\").to_dataframe()"
    ]
   },
   {
@@ -461,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.Pathway.filter(genes__symbol=\"KIR2DL1\").df()"
+    "bt.Pathway.filter(genes__symbol=\"KIR2DL1\").to_dataframe()"
    ]
   },
   {
