--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -345,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.from_df(adata.obs)\n",
+    "features = ln.Feature.from_dataframe(adata.obs)\n",
     "ln.save(features)"
    ]
   },
@@ -427,7 +427,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.ExperimentalFactor.df()"
+    "bt.ExperimentalFactor.to_dataframe()"
    ]
   },
   {
@@ -533,7 +533,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact.features[\"var\"].df().head()"
+    "artifact.features[\"var\"].to_dataframe().head()"
    ]
   },
   {
