📝 Update link for tracked function in sc-imaging2 and add hide-output tags

--- a/docs/sc-imaging4.ipynb
+++ b/docs/sc-imaging4.ipynb
@@ -605,7 +605,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "27",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Select a random cell from the WT dataset\n",
