--- a/docs/sc-imaging.ipynb
+++ b/docs/sc-imaging.ipynb
@@ -364,7 +364,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "def plot_example_images(df, n_images=3, title_prefix=\"\"):\n",
