--- a/docs/sc-imaging2.ipynb
+++ b/docs/sc-imaging2.ipynb
@@ -439,7 +439,7 @@
    "metadata": {},
    "source": [
     "To process all files in our dataset efficiently, we'll create a custom image processing function. \n",
-    "We decorate this function with {meth}`~lamindb.tracked` to track data lineage of the input and output artifacts. \n",
+    "We decorate this function with `tracked()` to track data lineage of the input and output artifacts. \n",
     "\n",
     "The function will skip files that have already been processed and uploaded, improving processing time by avoiding redundant computations."
    ]
