🚚 Rename to schmidt22

--- a/docs/schmidt22.ipynb
+++ b/docs/schmidt22.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trace data & code across a project"
+    "# Trace data & code in a project"
    ]
   },
   {
@@ -20,11 +20,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LaminDB allows tracing data lineage on the entire project level.\n",
+    "LaminDB lets you trace data lineage across an entire project.\n",
     "\n",
     "Here we follow [Schmidt _et al._, 2022](https://pubmed.ncbi.nlm.nih.gov/35113687/) through pipelines & notebooks.\n",
     "\n",
-    "A CRISPR screen reading out a phenotypic endpoint on T cells is paired with scRNA-seq to generate insights into IFN-γ production.\n",
+    "A CRISPR screen reading out a phenotypic endpoint is paired with scRNA-seq to generate insights into IFN-γ production.\n",
     "\n",
     "Through data lineage, these insights can be traced back through each preceding step to the original data to provide context for interpretation & future decision making.\n",
     "\n",
@@ -33,10 +33,6 @@
     ":::{dropdown} More specifically: Why should I care about data lineage?\n",
     "\n",
     "Data lineage tracks data sources & transformations to trace biological insights, verify experimental outcomes, meet regulatory standards, increase the robustness of research and optimize the feedback loop of team-wide learning iterations.\n",
-    "\n",
-    "While tracking data lineage is easier when it's governed by deterministic pipelines, it becomes hard when it's governed by interactive human-driven analyses.\n",
-    "\n",
-    "LaminDB interfaces workflow mangers for the former and embraces the latter.\n",
     "\n",
     ":::\n",
     "\n",
@@ -91,13 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following, we walk through exemplified steps covering different types of transforms ({class}`~docs:lamindb.Transform`).\n",
-    "\n",
-    "```{note}\n",
-    "\n",
-    "The full notebooks are in [this repository](https://github.com/laminlabs/rnd-demo).\n",
-    "\n",
-    "```"
+    "In the following, we walk through exemplified steps covering different types of transforms ({class}`~docs:lamindb.Transform`)."
    ]
   },
   {
