--- a/docs/schmidt22.ipynb
+++ b/docs/schmidt22.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trace data & code in a project"
+    "# Trace data & code in a project: Schmidt _et al._ (2022)"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "LaminDB lets you trace data lineage across an entire project.\n",
     "\n",
-    "Here we follow [Schmidt _et al._, 2022](https://pubmed.ncbi.nlm.nih.gov/35113687/) through pipelines & notebooks.\n",
+    "Here we follow [Schmidt _et al._ (2022)](https://pubmed.ncbi.nlm.nih.gov/35113687/) through pipelines & notebooks.\n",
     "\n",
     "A CRISPR screen reading out a phenotypic endpoint is paired with scRNA-seq to generate insights into IFN-γ production.\n",
     "\n",
